--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
-DB_USER=""
-DB_PASSWORD=""
-DB_HOST=""
+DB_NAME="jlpt"
+DB_USER="postgres"
+DB_PASSWORD="password"
+DB_HOST="localhost"
 DB_PORT=5432
 DB_URL="postgresql://postgres:password@localhost:5432/jlpt"
